--- a/home.html
+++ b/home.html
@@ -28,20 +28,40 @@
             height: 328px;
             padding: 0px;
             margin: 0px;
-            -webkit-box-shadow: inset -4px -46px 46px -2px rgba(0, 0, 0, 0.57);
-            box-shadow: inset -4px -46px 46px -2px rgba(0, 0, 0, 0.57);
-
+            z-index:3;
         }
 
         div.bg {
             background-image: url(BackgroundImage.png);
-            background-size: 100% 100%;
+            background-size: cover;
             background-repeat: no-repeat;
-
             height: 845px;
             margin: 0px;
             width: 100%;
             padding: 0px;
+            z-index: 0;
+        }
+
+        .bg::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 20%;
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.527), transparent);
+            z-index: 0;
+        }
+
+        div.bg::after {
+            content: '';
+            position: absolute;
+            bottom:0px;
+            right: 0;
+            width: 100%;
+            height: 20%;
+            background: linear-gradient(to top, rgba(0, 0, 0, 0.489), transparent);
+            z-index: 0;
         }
 
         div.image1 p {
@@ -72,20 +92,24 @@
         }
 
         a {
+            position: relative;
             color: #c7b29b !important;
             font-family: Charlemagne Std;
             font-weight: bold;
             font-size: 20px;
-            text-decoration:none;
+            text-decoration: none;
+            z-index: 3;
 
         }
 
         a.lang {
+            position: relative;
             color: #c7b29b !important;
             font-family: Raleway;
             font-weight: bold;
             text-decoration: none;
             font-size: 16px;
+            z-index: 6;
         }
 
         hr.color {
@@ -94,9 +118,20 @@
 
         div.b {
             border-color: #c7b29b !important;
-            border-bottom: 2px solid #c7b29b !important;
             width: 100%;
+            position: relative;
             height: 75px;
+        }
+        div.b::after{
+            content: '';
+            border-top: 2px solid #c7b29b !important;
+            bottom: 0;
+            left: 0;
+            position: absolute;
+            z-index: 10;
+            width: 100%;
+            height: 40%;
+            background: linear-gradient(to bottom,#0000005e,transparent);
         }
 
         h1,
@@ -132,6 +167,8 @@
             font-family: Gotham;
             font-weight: 500;
             padding: 10px;
+            z-index: 3;
+
         }
 
         a.boton:hover {
@@ -266,12 +303,12 @@
             background-color: #2d2d2d;
             padding-left: 30px;
             font-size: 20px;
-            letter-spacing:1px;
+            letter-spacing: 1px;
         }
 
         input:focus {
             color: #ffffff;
-            outline:  none;
+            outline: none;
 
 
         }
@@ -406,7 +443,7 @@
     </div>
     <footer>
         <div class="container-fluid">
-            <div class="row text-center ft justify-content-center">
+            <div class="row text-center ft ">
                 <div class="col-4">
                     <h3>Nos partenaires</h3>
                     <a href="">ORICHALCUM PICTURES</a>
